--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "type": "module",
   "dependencies": {
     "discord.js": "^13.7.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "google-auth-library": "^8.0.2",
+    "googleapis": "^100.0.0"
   }
 }
