--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
+    "@discordjs/voice": "^0.9.0",
+    "discord-ytdl-core": "^5.0.4",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^4.4.1",
     "google-auth-library": "^8.0.2",
-    "googleapis": "^100.0.0"
+    "googleapis": "^100.0.0",
+    "libsodium-wrappers": "^0.7.10",
+    "opusscript": "^0.0.8",
+    "ytdl-core": "^4.11.0"
   }
 }
