--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "googleapis": "^100.0.0",
     "libsodium-wrappers": "^0.7.10",
     "opusscript": "^0.0.8",
+    "prism-media": "^1.3.2",
     "ytdl-core": "^4.11.0"
   }
 }
